# marketplace-blog-api

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
services/auth/: Dockerfile  pyproject.toml
services/auth/app/: main.py
