[project]
name = "marketplace-blog-api"
version = "0.1.0"
description = ""
authors = [
    {name = "constscr",email = "golubevk2002@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.12.10"
pre-commit = "^4.3.0"

[tool.black]
line-length = 88
target-version = ["py313"]
extend-exclude = '''
(.venv|
alembic|
__pycache__)
'''

[tool.ruff]
line-length = 88
target-version = "py313"
exclude = [".venv", "alembic", "__pycache__"]
lint.select = ["E", "F", "I", "B", "UP", "C4", "PL"]
lint.ignore = ["E203", "E266", "E501"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
