[project]
name = "auth-service"
version = "0.1.0"
description = "Authentication service"
authors = [
    {name = "constscr",email = "golubevk2002@gmail.com"}
]
readme = "README.md"
packages = [{ include = "app" }]
requires-python = ">=3.13"
dependencies = [
    "fastapi[all] (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)"
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
